# ptd-cli

./: Cargo.toml  README.en.md  README.md  SKILL.md
.github/workflows/: release.yml
src/: host_main.rs  main.rs
src/cli/: last_search.rs  mod.rs  output.rs  send.rs
src/cli/commands/: download.rs  download_history.rs  downloader.rs  install.rs  keep_upload.rs  mod.rs  search.rs  site.rs  uninstall.rs  user_info.rs
src/host/: mod.rs  native_messaging.rs  registry.rs
src/shared/: constants.rs  mod.rs  paths.rs
