[package]
name = "ptd-cli"
version = "0.1.3"
edition = "2024"
description = "CLI for PT-Depiler browser extension via Native Messaging"
license = "MIT"

[[bin]]
name = "ptd"
path = "src/main.rs"

[[bin]]
name = "ptd-host"
path = "src/host_main.rs"

[dependencies]
anyhow = "1"
atty = "0.2"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
interprocess = { version = "2.4.0", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
